--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.6.10'
-    ext.OpenGALVerison = 'v0.2'
+    ext.OpenGALVerison = 'v0.3'
     repositories {
         mavenCentral()
     }
@@ -18,7 +18,7 @@ allprojects {
     }
 }
 group 'net.liplum'
-version '0.1.1'
+version '0.1.2'
 apply plugin: 'kotlin'
 sourceSets.main.java.srcDirs = ['src']
 sourceSets.test.java.srcDirs = ['test']
@@ -41,6 +41,10 @@ test {
     useJUnitPlatform {
         includeTags 'fast'
         excludeTags 'slow'
+    }
+    testLogging {
+        showStandardStreams = true
+        testLogging.exceptionFormat = 'full'
     }
 }
 compileKotlin {
