--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testImplementation "com.github.liplum:OpenGAL:$OpenGALVerison"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'com.github.liplum:TestUtils:v0.1'
 }
 test {
     useJUnitPlatform {
